--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+from dotenv import load_dotenv
 from dotenv import dotenv_values
+
+load_dotenv()
 db_user = "postgres"
 db_password = "damoxify"
 db_host = "localhost:5432"
